[gd_scene load_steps=12 format=3 uid="uid://b8xuyvaxtjitu"]

[ext_resource type="Script" path="res://Scripts/AnswerChecker.gd" id="1_bxt5d"]
[ext_resource type="Theme" uid="uid://c0noysaoxkp14" path="res://Stac_Theme.tres" id="2_8ksf4"]
[ext_resource type="Texture2D" uid="uid://dvq7bilb8ybe6" path="res://Textures/SVG/music-note.svg" id="3_2v48e"]
[ext_resource type="Texture2D" uid="uid://d17csocwenysl" path="res://Textures/SVG/x-lg.svg" id="4_a147i"]
[ext_resource type="Texture2D" uid="uid://dprgba6torwux" path="res://Textures/SVG/check-lg.svg" id="5_ov2h0"]
[ext_resource type="Texture2D" uid="uid://cqq0rs5tmgo40" path="res://Textures/SVG/emoji-laughing-fill.svg" id="6_mjgy0"]
[ext_resource type="Texture2D" uid="uid://dxwuedoywvf78" path="res://Textures/SVG/person-fill.svg" id="7_ygptg"]
[ext_resource type="Texture2D" uid="uid://bydhfqwoxqb8j" path="res://Textures/SVG/vinyl-fill.svg" id="8_e0ks6"]

[sub_resource type="ButtonGroup" id="ButtonGroup_impgi"]
resource_name = "Row1"

[sub_resource type="ButtonGroup" id="ButtonGroup_dfwqt"]
resource_name = "Row2"

[sub_resource type="ButtonGroup" id="ButtonGroup_ar5is"]
resource_name = "Row3"

[node name="AnswerChecker" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_8ksf4")
script = ExtResource("1_bxt5d")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("2_8ksf4")
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8ksf4")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0.443137, 0.168627, 0.301961, 1)
text = "Player Name Goes Here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleText" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/TitleText"]
layout_mode = 2
texture = ExtResource("3_2v48e")
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/TitleText"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("2_8ksf4")
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(0.443137, 0.168627, 0.301961, 1)
text = "Song"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="Wrong" type="Button" parent="CenterContainer/VBoxContainer/TitleText"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
toggle_mode = true
button_group = SubResource("ButtonGroup_impgi")
icon = ExtResource("4_a147i")
icon_alignment = 1

[node name="Right" type="Button" parent="CenterContainer/VBoxContainer/TitleText"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_impgi")
icon = ExtResource("5_ov2h0")
icon_alignment = 1

[node name="Funny" type="Button" parent="CenterContainer/VBoxContainer/TitleText"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_impgi")
icon = ExtResource("6_mjgy0")
icon_alignment = 1

[node name="ArtistText" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/ArtistText"]
layout_mode = 2
texture = ExtResource("7_ygptg")
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ArtistText"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("2_8ksf4")
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(0.443137, 0.168627, 0.301961, 1)
text = "Artist"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="Wrong" type="Button" parent="CenterContainer/VBoxContainer/ArtistText"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
toggle_mode = true
button_group = SubResource("ButtonGroup_dfwqt")
icon = ExtResource("4_a147i")
icon_alignment = 1

[node name="Right" type="Button" parent="CenterContainer/VBoxContainer/ArtistText"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_dfwqt")
icon = ExtResource("5_ov2h0")
icon_alignment = 1

[node name="Funny" type="Button" parent="CenterContainer/VBoxContainer/ArtistText"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_dfwqt")
icon = ExtResource("6_mjgy0")
icon_alignment = 1

[node name="AlbumText" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/AlbumText"]
layout_mode = 2
texture = ExtResource("8_e0ks6")
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/AlbumText"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("2_8ksf4")
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(0.443137, 0.168627, 0.301961, 1)
text = "Album"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="Wrong" type="Button" parent="CenterContainer/VBoxContainer/AlbumText"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
toggle_mode = true
button_group = SubResource("ButtonGroup_ar5is")
icon = ExtResource("4_a147i")
icon_alignment = 1

[node name="Right" type="Button" parent="CenterContainer/VBoxContainer/AlbumText"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_ar5is")
icon = ExtResource("5_ov2h0")
icon_alignment = 1

[node name="Funny" type="Button" parent="CenterContainer/VBoxContainer/AlbumText"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_ar5is")
icon = ExtResource("6_mjgy0")
icon_alignment = 1
